--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
+
+
+.card_ {
+    height: 250px;
+    border: 1px solid black;
+
+
+
+    .container_ {
+        padding: 2px 16px;
+    }
+}
